--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
         <section class="home flex-center" id="home">
             <div class="home-container">
-                <div class="image">
-                    <img src="" alt="">
-                </div>
                 <div class="info">
                     <h2>Hi, I am Laila</h2>
                     <h3>Full-Stack Developer</h3>
                     <p>"Turning simple ideas into immersive experiences."</p>
                     <a href="#contact" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
+                </div>
+                <div class="home-img">
+                    <img src="img/photo 6.png" alt="">
                 </div>
             </div>
         
