Updated the links in the porfolio area

--- a/index.html
+++ b/index.html
@@ -187,10 +187,11 @@
                 <div class="content">
                     <div class="portfolio-list">
                         <div class="img-card-container">
+                            <a href="./Copia de Perris /index.html" target="_blank">
                            <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <a href="./Copia de Perris /index.html" target="_blank"><h3>Perris</h3></a>
+                                <h3>Perris</h3>
                                 <span>HTML Email</span>
                             </div>
                             <img src="img/perris.png" alt="" width="350" height="360">
@@ -199,12 +200,14 @@
                             <div class="porfolio-model-body">
                         </div>
                         </div>
+                        </a>
                         </div>
                         <div class="img-card-container">
+                            <a href="./Copia de Gaze Home/index.html" target="_blank">
                             <div class="img-card">
                              <div class="overlay"></div>
                              <div class="info">
-                                <a href="./Copia de Gaze Home/index.html" target="_blank"><h3>Gaze Home</h3></a>
+                               <h3>Gaze Home</h3>
                                  <span>HTML Email</span>
                              </div>
                              <img src="img/Gaze Home.png" alt="" width="350" height="360">
@@ -213,12 +216,14 @@
                              <div class="porfolio-model-body">
                          </div>
                          </div>
+                         </a>
                          </div>
                          <div class="img-card-container">
+                            <a href="./Copia de Jamaica Music Forgot Password/index.html" target="_blank">
                             <div class="img-card">
                              <div class="overlay"></div>
                              <div class="info">
-                                <a href="./Copia de Jamaica Music Forgot Password/index.html" target="_blank"><h3>Jamaica Music</h3></a>
+                                <h3>Jamaica Music</h3>
                                  <span>HTML Email</span>
                              </div>
                              <img src="img/jamaica music.png" alt="" width="350" height="360">
@@ -227,12 +232,14 @@
                              <div class="porfolio-model-body">
                          </div>
                          </div>
+                        </a>
                          </div>
                          <div class="img-card-container">
+                            <a href="./Copia de Bagels/" target="_blank">
                             <div class="img-card">
                              <div class="overlay"></div>
                              <div class="info">
-                                <a href="./Copia de Bagels/" target="_blank"><h3>Bagels</h3></a>
+                                <h3>Bagels</h3>
                                  <span>Web Development</span>
                              </div>
                              <img src="img/Bagels.png" alt="" width="350" height="360">
@@ -241,12 +248,14 @@
                              <div class="porfolio-model-body">
                          </div>
                          </div>
+                        </a>
                          </div>
                          <div class="img-card-container">
+                            <a href="./Copia de Dog Blog/" target="_blank">
                             <div class="img-card">
                              <div class="overlay"></div>
                              <div class="info">
-                                <a href="./Copia de Dog Blog/" target="_blank"><h3>Dog Library</h3></a>
+                                <h3>Dog Library</h3>
                                  <span>Web Development</span>
                              </div>
                              <img src="img/Dog library.png" alt="" width="350" height="360">
@@ -255,6 +264,7 @@
                              <div class="porfolio-model-body">
                          </div>
                          </div>
+                        </a>
                          </div>
                     </div>
                 </div>
@@ -278,7 +288,7 @@
                     </li>
                     <li>
                         <h3 class="item-title"><i class="fab fa-instagram"></i> Instagram</h3>
-                        <span>@laila_cura</span>
+                        <a href="https://www.instagram.com/laila_cura?igsh=MXY1MmRkbG10czg3OQ%3D%3D&utm_source=qr" target="_blank"><span>@laila_cura</span></a>
                     </li>
                 </ul>
             </div>
