--- a/index.html
+++ b/index.html
@@ -61,6 +61,99 @@
             </div>
         </selction>
 
+        <section class="portfolio section" id="portfolio">
+            <div class="container flex-center">
+                <h1 class="section-title-01">Portfolio</h1>
+                <h2 class="section-title-02">Portfolio</h2>
+                <div class="content">
+                    <div class="portfolio-list2">
+                        <div class="img-card-container">
+                            <a href="./Copia de Dog Blog/" target="_blank">
+                            <div class="img-card">
+                             <div class="overlay"></div>
+                             <div class="info">
+                                <h3>Dog Library</h3>
+                                 <span>Web Development</span>
+                             </div>
+                             <img src="img/Dog library.png" alt="" width="530" height="360">
+                            </div> 
+                            <div class="porfolio-model flex-center">
+                             <div class="porfolio-model-body">
+                         </div>
+                         </div>
+                        </a>
+                         </div>
+                        <div class="img-card-container">
+                            <a href="./Copia de Bagels/" target="_blank">
+                            <div class="img-card">
+                             <div class="overlay"></div>
+                             <div class="info">
+                                <h3>Bagels</h3>
+                                 <span>Web Development</span>
+                             </div>
+                             <img src="img/Bagels.png" alt="" width="530" height="360">
+                            </div> 
+                            <div class="porfolio-model flex-center">
+                             <div class="porfolio-model-body">
+                         </div>
+                         </div>
+                        </a>
+                         </div>
+                    </div>
+                    <div class="portfolio-list">
+                        <div class="img-card-container">
+                            <a href="./Copia de Perris /index.html" target="_blank">
+                           <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>Perris</h3>
+                                <span>HTML Email</span>
+                            </div>
+                            <img src="img/perris.png" alt="" width="350" height="360">
+                           </div> 
+                           <div class="porfolio-model flex-center">
+                            <div class="porfolio-model-body">
+                        </div>
+                        </div>
+                        </a>
+                        </div>
+                        <div class="img-card-container">
+                            <a href="./Copia de Gaze Home/index.html" target="_blank">
+                            <div class="img-card">
+                             <div class="overlay"></div>
+                             <div class="info">
+                               <h3>Gaze Home</h3>
+                                 <span>HTML Email</span>
+                             </div>
+                             <img src="img/Gaze Home.png" alt="" width="350" height="360">
+                            </div> 
+                            <div class="porfolio-model flex-center">
+                             <div class="porfolio-model-body">
+                         </div>
+                         </div>
+                         </a>
+                         </div>
+                         <div class="img-card-container">
+                            <a href="./Copia de Jamaica Music Forgot Password/index.html" target="_blank">
+                            <div class="img-card">
+                             <div class="overlay"></div>
+                             <div class="info">
+                                <h3>Jamaica Music</h3>
+                                 <span>HTML Email</span>
+                             </div>
+                             <img src="img/jamaica music.png" alt="" width="350" height="360">
+                            </div> 
+                            <div class="porfolio-model flex-center">
+                             <div class="porfolio-model-body">
+                         </div>
+                         </div>
+                        </a>
+                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="skills section" id="skills">
             <div class="container flex-center">
                 <h1 class="section-title-01">Skills</h1>
@@ -180,97 +273,6 @@
             </div>
         </section>
         
-        <section class="portfolio section" id="portfolio">
-            <div class="container flex-center">
-                <h1 class="section-title-01">Portfolio</h1>
-                <h2 class="section-title-02">Portfolio</h2>
-                <div class="content">
-                    <div class="portfolio-list">
-                        <div class="img-card-container">
-                            <a href="./Copia de Perris /index.html" target="_blank">
-                           <div class="img-card">
-                            <div class="overlay"></div>
-                            <div class="info">
-                                <h3>Perris</h3>
-                                <span>HTML Email</span>
-                            </div>
-                            <img src="img/perris.png" alt="" width="350" height="360">
-                           </div> 
-                           <div class="porfolio-model flex-center">
-                            <div class="porfolio-model-body">
-                        </div>
-                        </div>
-                        </a>
-                        </div>
-                        <div class="img-card-container">
-                            <a href="./Copia de Gaze Home/index.html" target="_blank">
-                            <div class="img-card">
-                             <div class="overlay"></div>
-                             <div class="info">
-                               <h3>Gaze Home</h3>
-                                 <span>HTML Email</span>
-                             </div>
-                             <img src="img/Gaze Home.png" alt="" width="350" height="360">
-                            </div> 
-                            <div class="porfolio-model flex-center">
-                             <div class="porfolio-model-body">
-                         </div>
-                         </div>
-                         </a>
-                         </div>
-                         <div class="img-card-container">
-                            <a href="./Copia de Jamaica Music Forgot Password/index.html" target="_blank">
-                            <div class="img-card">
-                             <div class="overlay"></div>
-                             <div class="info">
-                                <h3>Jamaica Music</h3>
-                                 <span>HTML Email</span>
-                             </div>
-                             <img src="img/jamaica music.png" alt="" width="350" height="360">
-                            </div> 
-                            <div class="porfolio-model flex-center">
-                             <div class="porfolio-model-body">
-                         </div>
-                         </div>
-                        </a>
-                         </div>
-                         <div class="img-card-container">
-                            <a href="./Copia de Bagels/" target="_blank">
-                            <div class="img-card">
-                             <div class="overlay"></div>
-                             <div class="info">
-                                <h3>Bagels</h3>
-                                 <span>Web Development</span>
-                             </div>
-                             <img src="img/Bagels.png" alt="" width="350" height="360">
-                            </div> 
-                            <div class="porfolio-model flex-center">
-                             <div class="porfolio-model-body">
-                         </div>
-                         </div>
-                        </a>
-                         </div>
-                         <div class="img-card-container">
-                            <a href="./Copia de Dog Blog/" target="_blank">
-                            <div class="img-card">
-                             <div class="overlay"></div>
-                             <div class="info">
-                                <h3>Dog Library</h3>
-                                 <span>Web Development</span>
-                             </div>
-                             <img src="img/Dog library.png" alt="" width="350" height="360">
-                            </div> 
-                            <div class="porfolio-model flex-center">
-                             <div class="porfolio-model-body">
-                         </div>
-                         </div>
-                        </a>
-                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
 <section class="contact section" id="contact">
     <div class="container flex-center">
         <h1 class="section-title-01">Contact Me</h1>
