agregue cv actualizado

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         
         </section>
+
         <selction class="about section" id="about">
             <div class="container flex-center">
                 <h1 class="section-title-01">About Me</h1>
@@ -55,7 +56,7 @@
                         <p>Highly motivated and results-driven Full-Stack Developer with over 3 years of experience in designing and developing web applications. Proficient in front-end technologies including HTML, CSS, and JavaScript, with a solid foundation in back-end development and data analysis. Passionate about creating user-centric solutions and optimizing user experiences through empathetic design principles.</p>
                     </div>
                     <div class="cv">
-                        <a href="./Laila Cura Resume.pdf" class="btn" target="_blank">Download CV <i class="fas fa-download"></i></a>
+                        <a href="./Laila Cura CV.pdf" class="btn" target="_blank">Download CV <i class="fas fa-download"></i></a>
                     </div>
                 </div>
             </div>
